Bump version to 2.0.1 and enhance update checking mechanism